Fix overlap between graphic and Dashboard button

--- a/src/styles/theme/_sections.scss
+++ b/src/styles/theme/_sections.scss
@@ -149,7 +149,6 @@
     }
 
     &__image {
-        margin-top: -50px;
         width: 100%;
     }
 
